Courses/202403/Ingress/deployment_service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-deployment
spec:
  replicas: 2
  selector: 
    matchLabels:
      app: hellopod
  template:
    metadata:
      labels:
        app: hellopod
    spec:
      containers:
      - image: mcr.microsoft.com/azuredocs/aks-helloworld:v1
        name: hellocontainer
---
apiVersion: v1
kind: Service
metadata:
  name: hello-service
spec:
  type: ClusterIP
  selector:
    app: hellopod
  ports:
    - port: 80
      targetPort: 80
